k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-production
  namespace: prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
        - name: container-production
          image: nginx
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 8090
  strategy:
    type: RollingUpdate
