k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-04-27T01:27:12Z"
  name: service-production
  namespace: prod
  resourceVersion: "1933"
  uid: 251aa2e4-b7b8-47e6-8a8e-f4511c52fede
spec:
  clusterIP: 10.99.70.228
  clusterIPs:
  - 10.99.70.228
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: production
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
